@@ -66,8 +66,6 @@ import java.lang.reflect.Constructor;
 import java.net.HttpRetryException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.UnknownHostException;
@@ -110,6 +108,7 @@ import jenkins.RestartRequiredException;
 import jenkins.install.InstallUtil;
 import jenkins.management.Badge;
 import jenkins.model.Jenkins;
+import jenkins.model.Loadable;
 import jenkins.security.stapler.StaplerDispatchable;
 import jenkins.util.SystemProperties;
 import jenkins.util.Timer;
@@ -156,7 +155,7 @@ import org.springframework.security.core.Authentication;
  * @since 1.220
  */
 @ExportedBean
-public class UpdateCenter extends AbstractModelObject implements Saveable, OnMaster, StaplerProxy {
+public class UpdateCenter extends AbstractModelObject implements Loadable, Saveable, OnMaster, StaplerProxy {
 
     private static final Logger LOGGER;
     private static final String UPDATE_CENTER_URL;
@@ -986,6 +985,7 @@ public class UpdateCenter extends AbstractModelObject implements Saveable, OnMas
     /**
      * Loads the data from the disk into this object.
      */
+    @Override
     public synchronized void load() throws IOException {
         XmlFile file = getConfigFile();
         if (file.exists()) {
@@ -1209,13 +1209,7 @@ public class UpdateCenter extends AbstractModelObject implements Saveable, OnMas
          * @throws IOException if a connection can't be established
          */
         public void checkConnection(ConnectionCheckJob job, String connectionCheckUrl) throws IOException {
-            try {
-                testConnection(new URI(connectionCheckUrl).toURL());
-            } catch (URISyntaxException e) {
-                MalformedURLException mex = new MalformedURLException(e.getMessage());
-                mex.initCause(e);
-                throw mex;
-            }
+            testConnection(new URL(connectionCheckUrl));
         }
 
         /**
@@ -1238,21 +1232,9 @@ public class UpdateCenter extends AbstractModelObject implements Saveable, OnMas
         static URL toUpdateCenterCheckUrl(String updateCenterUrl) throws MalformedURLException {
             URL url;
             if (updateCenterUrl.startsWith("http://") || updateCenterUrl.startsWith("https://")) {
-                try {
-                    url = new URI(updateCenterUrl + (updateCenterUrl.indexOf('?') == -1 ? "?uctest" : "&uctest")).toURL();
-                } catch (URISyntaxException e) {
-                    MalformedURLException mex = new MalformedURLException(e.getMessage());
-                    mex.initCause(e);
-                    throw mex;
-                }
+                url = new URL(updateCenterUrl + (updateCenterUrl.indexOf('?') == -1 ? "?uctest" : "&uctest"));
             } else {
-                try {
-                    url = new URI(updateCenterUrl).toURL();
-                } catch (URISyntaxException e) {
-                    MalformedURLException mex = new MalformedURLException(e.getMessage());
-                    mex.initCause(e);
-                    throw mex;
-                }
+                url = new URL(updateCenterUrl);
             }
             return url;
         }
@@ -2442,13 +2424,7 @@ public class UpdateCenter extends AbstractModelObject implements Saveable, OnMas
 
         @Override
         protected URL getURL() throws MalformedURLException {
-            try {
-                return new URI(plugin.url).toURL();
-            } catch (URISyntaxException e) {
-                MalformedURLException mex = new MalformedURLException(e.getMessage());
-                mex.initCause(e);
-                throw mex;
-            }
+            return new URL(plugin.url);
         }
 
         @Override
@@ -2590,13 +2566,7 @@ public class UpdateCenter extends AbstractModelObject implements Saveable, OnMas
             if (site == null) {
                 throw new MalformedURLException("no update site defined");
             }
-            try {
-                return new URI(site.getData().core.url).toURL();
-            } catch (URISyntaxException e) {
-                MalformedURLException mex = new MalformedURLException(e.getMessage());
-                mex.initCause(e);
-                throw mex;
-            }
+            return new URL(site.getData().core.url);
         }
 
         @Override
